{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 226,
  "lineage": "ee5b7496-8a5f-596f-0885-932652ecbb01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0402c79ac05a19fa7",
            "association_id": "eipassoc-0d892d54516b372a4",
            "domain": "vpc",
            "id": "eipalloc-0402c79ac05a19fa7",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0be2d3bbdab0514a9",
            "private_dns": "ip-172-17-2-98.eu-west-3.compute.internal",
            "private_ip": "172.17.2.98",
            "public_dns": "ec2-52-47-149-132.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.149.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "apprunner-workshop-eip-1"
            },
            "tags_all": {
              "Name": "apprunner-workshop-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3cd94b308bfb5ad",
            "association_id": "eipassoc-053e9ba689682b27d",
            "domain": "vpc",
            "id": "eipalloc-0a3cd94b308bfb5ad",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-03000b3c6d612c5f2",
            "private_dns": "ip-172-17-3-253.eu-west-3.compute.internal",
            "private_ip": "172.17.3.253",
            "public_dns": "ec2-35-181-143-82.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.143.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "apprunner-workshop-eip-2"
            },
            "tags_all": {
              "Name": "apprunner-workshop-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:435683540071:internet-gateway/igw-0c63e8537a49bc683",
            "id": "igw-0c63e8537a49bc683",
            "owner_id": "435683540071",
            "tags": {
              "Name": "apprunner-workshop-IGW"
            },
            "tags_all": {
              "Name": "apprunner-workshop-IGW"
            },
            "vpc_id": "vpc-02f72a4ccf888febd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0402c79ac05a19fa7",
            "association_id": "eipassoc-0d892d54516b372a4",
            "connectivity_type": "public",
            "id": "nat-08e6f8b21391ffb2e",
            "network_interface_id": "eni-0be2d3bbdab0514a9",
            "private_ip": "172.17.2.98",
            "public_ip": "52.47.149.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07728bec8a048bdf4",
            "tags": {
              "Name": "apprunner-workshop-NatGateway-1"
            },
            "tags_all": {
              "Name": "apprunner-workshop-NatGateway-1"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3cd94b308bfb5ad",
            "association_id": "eipassoc-053e9ba689682b27d",
            "connectivity_type": "public",
            "id": "nat-048938b9d34953fda",
            "network_interface_id": "eni-03000b3c6d612c5f2",
            "private_ip": "172.17.3.253",
            "public_ip": "35.181.143.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08b9f459ce9867ccd",
            "tags": {
              "Name": "apprunner-workshop-NatGateway-2"
            },
            "tags_all": {
              "Name": "apprunner-workshop-NatGateway-2"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c63e8537a49bc683",
            "id": "r-rtb-0aed8a2a1f44738ba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aed8a2a1f44738ba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:435683540071:route-table/rtb-07cd0f1c546a8f4d3",
            "id": "rtb-07cd0f1c546a8f4d3",
            "owner_id": "435683540071",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08e6f8b21391ffb2e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apprunner-workshop-PrivateRouteTable-1"
            },
            "tags_all": {
              "Name": "apprunner-workshop-PrivateRouteTable-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f72a4ccf888febd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:435683540071:route-table/rtb-0762fca9c711e3847",
            "id": "rtb-0762fca9c711e3847",
            "owner_id": "435683540071",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-048938b9d34953fda",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apprunner-workshop-PrivateRouteTable-2"
            },
            "tags_all": {
              "Name": "apprunner-workshop-PrivateRouteTable-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f72a4ccf888febd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0551ffae91e77b756",
            "route_table_id": "rtb-07cd0f1c546a8f4d3",
            "subnet_id": "subnet-0f777bf86cb323ba7"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-route-table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e43d87c17bbf8713",
            "route_table_id": "rtb-0762fca9c711e3847",
            "subnet_id": "subnet-00e16ed4b1ec8fde1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-route-table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:435683540071:security-group/sg-034a7149a8cf31021",
            "description": "Access to the RDS instances from the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034a7149a8cf31021",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "172.17.0.0/16"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "apprunner-workshop-db-sg",
            "name_prefix": "",
            "owner_id": "435683540071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apprunner-workshop-db-sg"
            },
            "tags_all": {
              "Name": "apprunner-workshop-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f72a4ccf888febd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:435683540071:subnet/subnet-0f777bf86cb323ba7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.17.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f777bf86cb323ba7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435683540071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apprunner-workshop-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "apprunner-workshop-PrivateSubnet-1"
            },
            "vpc_id": "vpc-02f72a4ccf888febd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:435683540071:subnet/subnet-00e16ed4b1ec8fde1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e16ed4b1ec8fde1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435683540071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apprunner-workshop-PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "apprunner-workshop-PrivateSubnet-2"
            },
            "vpc_id": "vpc-02f72a4ccf888febd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:435683540071:subnet/subnet-07728bec8a048bdf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07728bec8a048bdf4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435683540071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apprunner-workshop-PublicSubnet-1"
            },
            "tags_all": {
              "Name": "apprunner-workshop-PublicSubnet-1"
            },
            "vpc_id": "vpc-02f72a4ccf888febd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:435683540071:subnet/subnet-08b9f459ce9867ccd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b9f459ce9867ccd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435683540071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apprunner-workshop-PublicSubnet-2"
            },
            "tags_all": {
              "Name": "apprunner-workshop-PublicSubnet-2"
            },
            "vpc_id": "vpc-02f72a4ccf888febd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:435683540071:vpc/vpc-02f72a4ccf888febd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0029ae491bb3fbdc3",
            "default_route_table_id": "rtb-0aed8a2a1f44738ba",
            "default_security_group_id": "sg-08cfb7459606c542e",
            "dhcp_options_id": "dopt-020fd453fe818b09d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02f72a4ccf888febd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aed8a2a1f44738ba",
            "owner_id": "435683540071",
            "tags": {
              "Name": "apprunner-workshop-VPC"
            },
            "tags_all": {
              "Name": "apprunner-workshop-VPC"
            }
          }
        }
      ]
    }
  ]
}